--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
 
                     <!-- Link Start -->
-                    <a href="contact.html" class="flex items-center flex-wrap py-[6px] px-3 text-[15px] font-bold text-active leading-none mr-2 transition-all duration-300 hover:text-orange md:hover:text-white group">Let’s
+                    <a href="#contact" class="flex items-center flex-wrap py-[6px] px-3 text-[15px] font-bold text-active leading-none mr-2 transition-all duration-300 hover:text-orange md:hover:text-white group">Let’s
                         Talk
                         <span class="inline-block ml-3 group-hover:animate-arrow-move-up">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -148,7 +148,7 @@
                         </li>
 
                         <li class="border-b border-border-white py-4 group">
-                            <a href="contact.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Contact
+                            <a href="#contact" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Contact
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -201,7 +201,7 @@
                         <div class="flex flex-wrap mb-[50px] md:mb-[60px] xl:mb-[70px] 2xl:mb-[80px]">
                             <!-- Link Start -->
                             <span data-aos="fade-right" data-aos-delay="1000">
-            <a href="contact.html" class="flex items-center flex-wrap btn-primary mr-2 group">Let’s
+            <a href="#contact" class="flex items-center flex-wrap btn-primary mr-2 group">Let’s
               Talk
               <span class="inline-block ml-3 group-hover:animate-arrow-move-up">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -248,7 +248,7 @@
                      style="width: 788px; height: 767px"
                      data-aos="fade-left" src="assets/images/hero/hero.png" alt="hero Image">
 
-                <a href="contact.html">
+                <a href="#contact">
                 </a>
 
             </div>
@@ -288,7 +288,7 @@
 
 
                         <div class="flex flex-wrap">
-                            <a href="contact.html" class="flex items-center flex-wrap btn-primary group">To submit for Q2 journal
+                            <a href="#contact" class="flex items-center flex-wrap btn-primary group">To submit for Q2 journal
                                 <span class="inline-block ml-3 group-hover:animate-arrow-move-up">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2"
@@ -308,7 +308,7 @@
         <!-- tabs start -->
         <section id="resume" class="featured-properties py-[80px] lg:py-[100px]">
             <div class="container">
-                <div class="grid grid-cols-12 lg:gap-[60px] xl:gap-[100px] 2xl:gap-[134px]">
+                <div class="grid grid-cols-12 lg:gap-[60px] xl:gap-[100px]">
 
                     <div class="col-span-12 lg:col-span-5 2xl:col-span-4" data-aos="fade-up">
 
@@ -964,7 +964,7 @@
         <!-- Brand Section End-->
 
 <!--        Contact Start-->
-        <section class="bg-secondary pt-20 py-[120px]">
+        <section id="contact" class="bg-secondary pt-20 py-[120px]">
             <div class="container mx-auto">
                 <div class="grid grid-cols-12 gap-6">
                     <div class="col-span-12 lg:col-span-6" data-aos="fade-up">
