--- a/index.html
+++ b/index.html
@@ -245,7 +245,6 @@
 
             <div class="hidden md:block">
                 <img class="absolute top-0 right-0 md:max-w-[420px] lg:max-w-[570px] xl:max-w-[650px] 2xl:max-w-[initial]"
-                     style="width: 788px; height: 767px"
                      data-aos="fade-left" src="assets/images/hero/hero.png" alt="hero Image">
 
                 <a href="#contact">
@@ -743,7 +742,7 @@
                     <svg width="54" height="54" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M27.5625 0C27.5625 23.1273 9.1875 28.5455 0 27.8182C16.875 31.0909 25.3125 34.3636 27 54C27 40.3636 34.875 30.5455 54 27.8182C46.125 28.3636 29.8125 24 27.5625 0Z"
-                            fill="#FFB646" />
+                            fill="#4078F6" />
                     </svg>
                 </span>
                     </div>
