--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             </div>
 
             <div class="hidden md:block">
-                <img class="absolute top-0 right-0 md:max-w-[420px] lg:max-w-[570px] xl:max-w-[650px] 2xl:max-w-[initial]"
+                <img class="absolute top-0 right-0 md:max-w-[350px] lg:max-w-[500px] xl:max-w-[650px] 2xl:max-w-[730px]"
                      data-aos="fade-left" src="assets/images/hero/hero.png" alt="hero Image">
 
                 <a href="#contact">
