--- a/index.html
+++ b/index.html
@@ -251,14 +251,54 @@
                 </a>
 
             </div>
-
-
-
-
-
-
         </section>
         <!-- Hero section end -->
+
+        <!--        Words that speak Start-->
+        <section class="wordCarousel featured-properties py-9 text-center" data-aos="zoom-out" data-aos-delay="300">
+            <div class="container">
+                <h3 class="text-black-800 text-4xl lg:text-5xl xl:text-[64px]">
+                    Words that speak my spirit
+                </h3>
+                <div class="swiper py-6">
+                    <div class="swiper-wrapper h-[140px]">
+                        <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
+                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <div class="flex-1 text-start">
+                                <b>Robust</b> - possessing the strength to handle challenges and sustain a thriving environment, like a river’s vigorous, continous flow, embodying a sense of durability.
+                            </div>
+                        </div>
+                        <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
+                            <img class="mx-auto block" src="assets/images/word/img_1.png" alt="certificateLogo">
+                            <div class="flex-1 text-start">
+                                <b>Intrepid</b> - fearless and adventurous, seeking new paths just as a river’s winding nature cuts through landscapes.
+                            </div>
+                        </div>
+                        <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
+                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <div class="flex-1 text-start">
+                                <b>Versatile</b> - adaptable, resourceful, and flexible in roles, vividly displaying an eagerness to learn, grow, and evolve.
+                            </div>
+                        </div>
+                        <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
+                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <div class="flex-1 text-start">
+                                <b>Empathetic</b> - having the ability to deeply understand the feelings of others, providing nurturing support as well as building emotional connections
+                            </div>
+                        </div>
+                        <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
+                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <div class="flex-1 text-start">
+                                <b>Reflective</b> - introspective and willing to self-assess to seek improvements and grow. Calmness, like a river’s reflective surface, provides clarity for self-contemplation.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!--        Words that speak End-->
+
 
         <!-- About Us Sectin Start -->
         <section class="about-section py-[120px]" data-aos="zoom-out" data-aos-delay="300">
@@ -879,7 +919,6 @@
         <div class="bg-white brandCarousel" data-aos="flip-down">
             <div class="container">
                 <div class="swiper">
-
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img class="mx-auto block" src="assets/images/brand/1.jpg" alt=" brandlogo">
