--- a/index.html
+++ b/index.html
@@ -263,31 +263,31 @@
                 <div class="swiper py-6">
                     <div class="swiper-wrapper h-[140px]">
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Robust</b> - possessing the strength to handle challenges and sustain a thriving environment, like a river’s vigorous, continous flow, embodying a sense of durability.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block" src="assets/images/word/img_1.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_1.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Intrepid</b> - fearless and adventurous, seeking new paths just as a river’s winding nature cuts through landscapes.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_2.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Versatile</b> - adaptable, resourceful, and flexible in roles, vividly displaying an eagerness to learn, grow, and evolve.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_3.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Empathetic</b> - having the ability to deeply understand the feelings of others, providing nurturing support as well as building emotional connections
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_4.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Reflective</b> - introspective and willing to self-assess to seek improvements and grow. Calmness, like a river’s reflective surface, provides clarity for self-contemplation.
                             </div>
