--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Perez - Tailwind CSS Personal Portfolio Template</title>
+    <title>INGRID MAH</title>
     <meta name="AdsBot-Google" content="noindex follow" />
-    <meta name="description" content="Perez - Tailwind CSS Personal Portfolio Template">
+    <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Favicon -->
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="index.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">About
+                            <a href="#about" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">About
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -123,7 +123,7 @@
 
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="project.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Creative Product
+                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Creative Product
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -135,7 +135,7 @@
                             </a>
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Resume
+                            <a href="#resume" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Resume
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -301,7 +301,7 @@
 
 
         <!-- About Us Sectin Start -->
-        <section class="about-section py-[120px]" data-aos="zoom-out" data-aos-delay="300">
+        <section id="about" class="about-section py-[120px]" data-aos="zoom-out" data-aos-delay="300">
             <div class="container">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-[60px] xl:gap-[134px]">
                     <div class="relative">
