--- a/blog-details.html
+++ b/blog-details.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Perez - Tailwind CSS Personal Portfolio Template</title>
+    <title>INGRID MAH</title>
     <meta name="AdsBot-Google" content="noindex follow" />
-    <meta name="description" content="Perez - Tailwind CSS Personal Portfolio Template">
+    <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 
