--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Perez - Tailwind CSS Personal Portfolio Template</title>
+    <title>INGRID MAH</title>
     <meta name="AdsBot-Google" content="noindex follow" />
-    <meta name="description" content="Perez - Tailwind CSS Personal Portfolio Template">
+    <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Favicon -->
@@ -43,7 +43,7 @@
                     </a>
 
                     <!-- Link Start -->
-                    <a href="contact.html" class="flex items-center flex-wrap py-[6px] px-3 text-[15px] font-bold text-active leading-none mr-2 transition-all duration-300 hover:text-orange group">Let’s
+                    <a href="index.html#contact" class="flex items-center flex-wrap py-[6px] px-3 text-[15px] font-bold text-active leading-none mr-2 transition-all duration-300 hover:text-orange group">Let’s
                         Talk
                         <span class="inline-block ml-3 group-hover:animate-arrow-move-up">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -107,7 +107,7 @@
                             </a>
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="index.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">About
+                            <a href="index.html#about" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">About
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -120,7 +120,7 @@
 
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="project.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Creative Product
+                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Creative Product
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -132,7 +132,7 @@
                             </a>
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Resume
+                            <a href="index.html#resume" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Resume
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -145,7 +145,7 @@
                         </li>
 
                         <li class="border-b border-border-white py-4 group">
-                            <a href="contact.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Contact
+                            <a href="index.html#contact" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Contact
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
