fix image share

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="AdsBot-Google" content="noindex follow" />
     <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fbeautiful%2520nature%2F&psig=AOvVaw0TeMf2ZZQUtbW3kOZImLjL&ust=1729152960927000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPijrfG6kokDFQAAAAAdAAAAABAE">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
@@ -23,7 +24,6 @@
     <!-- Plugins CSS (All Plugins Files) -->
     <link rel="stylesheet" href="assets/css/plugins/aos.css" />
     <link rel="stylesheet" href="assets/css/plugins/swiper-bundle.min.css" />
-
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
