--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="AdsBot-Google" content="noindex follow" />
     <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fbeautiful%2520nature%2F&psig=AOvVaw0TeMf2ZZQUtbW3kOZImLjL&ust=1729152960927000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPijrfG6kokDFQAAAAAdAAAAABAE">
+    <meta property="og:image" content="https://t4.ftcdn.net/jpg/07/23/14/93/360_F_723149335_tA0Fo8zefrHzYlSgXRMYHmBQk7CuWrRd.jpg">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
