--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:image" content="https://t4.ftcdn.net/jpg/07/23/14/93/360_F_723149335_tA0Fo8zefrHzYlSgXRMYHmBQk7CuWrRd.jpg">
+    <meta property="og:url" content="https://ingridmah.vercel.app">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
