--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,11 @@
     <meta name="AdsBot-Google" content="noindex follow" />
     <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta property="og:image" content="assets/images/brand/2.jpg">
+    <meta property="og:url" content="https://ingridmah.vercel.app">
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
