--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="AdsBot-Google" content="noindex follow" />
     <meta name="description" content="INGRID MAH">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:image" content="assets/images/brand/2.jpg">
+    <meta property="og:image" content="assets/images/brand/1.png">
     <meta property="og:url" content="https://ingridmah.vercel.app">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1024">
