--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                         </li>
                         <li class="border-b border-border-white py-4 group">
-                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Creative Product
+                            <a href="projects.html" class="text-white text-xl font-bold font-Syne leading-none flex flex-wrap items-center justify-between hover:text-orange transition duration-300">Art activities
                                 <span class="inline-block group-hover:animate-arrow-move-up">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -266,31 +266,31 @@
                 <div class="swiper py-6">
                     <div class="swiper-wrapper h-[140px]">
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" width="370" src="assets/images/word/img.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
-                                <b>Robust</b> - possessing the strength to handle challenges and sustain a thriving environment, like a river’s vigorous, continous flow, embodying a sense of durability.
+                                <b>Robust</b> - possessing the strength to handle challenges and sustain a thriving environment, like a river’s vigorous, </br> <b>continous</b> flow, embodying a sense of durability.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_1.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" width="370" src="assets/images/word/img_1.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Intrepid</b> - fearless and adventurous, seeking new paths just as a river’s winding nature cuts through landscapes.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_2.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" width="370" src="assets/images/word/img_2.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Versatile</b> - adaptable, resourceful, and flexible in roles, vividly displaying an eagerness to learn, grow, and evolve.
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_3.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" width="370" src="assets/images/word/img_3.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Empathetic</b> - having the ability to deeply understand the feelings of others, providing nurturing support as well as building emotional connections
                             </div>
                         </div>
                         <div class="swiper-slide h-full flex items-center sm:gap-4 md:gap-6 lg:gap-12">
-                            <img class="mx-auto block hidden sm:block" src="assets/images/word/img_4.png" alt="certificateLogo">
+                            <img class="mx-auto block hidden sm:block" width="370" src="assets/images/word/img_4.png" alt="certificateLogo">
                             <div class="flex-1 text-start">
                                 <b>Reflective</b> - introspective and willing to self-assess to seek improvements and grow. Calmness, like a river’s reflective surface, provides clarity for self-contemplation.
                             </div>
@@ -314,33 +314,23 @@
 
                         <div class="flex flex-wrap flex-col absolute bottom-0 right-0 md:right-[170px] lg:right-[-30px] z-10">
                             <span
-                class="text-black-800 text-[65px] xl:text-[80px] font-bold font-Syne leading-none inline-block relative before:rounded-full before:bg-primary before:block before:absolute before:top-[50%] before:left-[-13px] before:-z-[1] before:w-[95px] lg:before:w-[100px] xl:before:w-[110px] before:h-[95px] lg:before:h-[100px] xl:before:h-[110px] before:translate-y-[-50%]">09/2024</span>
-                            <span class="strock-text mt-5">Present</span>
+                class="text-black-800 text-[65px] xl:text-[80px] font-bold font-Syne leading-none inline-block relative before:rounded-full before:bg-primary before:block before:absolute before:top-[50%] before:left-[-13px] before:-z-[1] before:w-[95px] lg:before:w-[100px] xl:before:w-[110px] before:h-[95px] lg:before:h-[100px] xl:before:h-[110px] before:translate-y-[-50%]">12/2024</span>
 
                         </div>
                     </div>
                     <div class="font-bold font-Syne leading-none flex flex-wrap flex-col gap-y-2">
                         <span class="text-orange text-xl">Hello I’m</span>
                         <h3 class="text-black-800 text-4xl lg:text-5xl xl:text-[64px] tracking-[-1.5px] relative before:rounded-full before:bg-primary before:block before:absolute before:top-[2px] before:left-0 before:-z-[1] before:w-[36px] lg:before:w-[48px] xl:before:w-[64px] before:h-[36px] lg:before:h-[48px] xl:before:h-[64px]">
-                            Ingrid Mah, Reaserch, Creative Product
+                            Ingrid Mah, Ongoing, Research
                         </h3>
 
-                        <h4 class="text-black-800 text-lg lg:text-xl xl:text-[30px] mt-3 mb-4">Adaptive Model Predictive Control for Ackermann Robot Path Planning and Control</h4>
-                        <p class="paragraph mb-6">Research Assistant and Co-Author</p>
+                        <h4 class="text-black-800 text-lg lg:text-xl xl:text-[30px] mt-3 mb-4">Study of the chemical composition and biological activity of the essential oil of the White Flower Snake Herb plant (to submit both Q2 and Q3)</h4>
+                        <p class="paragraph mb-4">Research Assistant and Co-Author</p>
 
+                        <p style="color: #080808CC" class="pl-4 relative z-[1] before:rounded-full before:bg-orange before:block before:absolute before:top-[50%] before:translate-y-[-50%] before:left-0 before:-z-[1] before:w-[8px] before:h-[8px] paragraph mb-1">Essential oil distillation</p>
+                        <p class="relative z-[1] pl-4 before:rounded-full before:bg-orange before:block before:absolute before:top-[50%] before:translate-y-[-50%] before:left-0 before:-z-[1] before:w-[8px] before:h-[8px] paragraph mb-1" style="color: #080808CC">GCMS analysis</p>
+                        <p class="relative z-[1] pl-4 before:rounded-full before:bg-orange before:block before:absolute before:top-[50%] before:translate-y-[-50%] before:left-0 before:-z-[1] before:w-[8px] before:h-[8px] paragraph mb-1" style="color: #080808CC">Investigation of the biological activity of the essential oil: in vitro study on the anti-cancer potential of the extract from the White Flower Snake Herb plant.</p>
 
-                        <div class="flex flex-wrap">
-                            <a href="#contact" class="flex items-center flex-wrap btn-primary group">To submit for Q2 journal
-                                <span class="inline-block ml-3 group-hover:animate-arrow-move-up">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round"></path>
-                        <path d="M7 7H17V17" stroke="currentColor" stroke-opacity="0.9" stroke-width="2"
-                            stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                </span>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -460,13 +450,7 @@
                                         <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
                                     Nationality</span>
                                         <span class="text-black-800 text-2xl font-bold font-Syne leading-8">
-                                    Vietnam</span>
-                                    </li>
-                                    <li class="gap-10 inline-flex items-center">
-                                        <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
-                                    Phone</span>
-                                        <span class="text-black-800 text-2xl font-bold font-Syne leading-8">
-                                    (+84) 817 833 504</span>
+                                    Singaporean</span>
                                     </li>
                                     <li class="gap-10 inline-flex items-center">
                                         <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
@@ -484,7 +468,7 @@
                                         <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
                                     Hobbies & skills</span>
                                         <span class="text-black-800 text-2xl font-bold font-Syne leading-8">
-                                    Photographing, Writing</span>
+                                    Photography, Writing</span>
                                     </li>
                                     <li class="gap-10 inline-flex items-center">
                                         <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
@@ -754,6 +738,12 @@
                                         <h4 class="font-bold font-Syne leading-normal text-2xl text-black-800">
                                             House Captain
                                         </h4>
+
+                                        <p class="text-lg font-normal font-sans leading-7 text-black-800 relative z-[1] before:rounded-full before:bg-orange before:block before:absolute before:top-[50%] before:translate-y-[-50%] before:left-0 before:-z-[1] before:w-[8px] before:h-[8px] pl-4">
+                                            The house system, a schoolwide system that sorts all members into groups to participate in activities, allows students to engage in friendly competition                                        </p>
+
+                                        <p class="text-lg font-normal font-sans leading-7 text-black-800 relative z-[1] before:rounded-full before:bg-orange before:block before:absolute before:top-[50%] before:translate-y-[-50%] before:left-0 before:-z-[1] before:w-[8px] before:h-[8px] pl-4">
+                                            As a house captain, one of the leadership roles our school provides, I help spread awareness and encourage school spirit across the whole campus.                                        </p>
                                     </div>
                                 </div>
                                 <div class="pt-[30px] px-7 pb-7 bg-black-500 rounded-2xl transition-all hover:shadow-2xl hover:bg-white flex flex-wrap flex-col gap-8 justify-between">
@@ -1038,24 +1028,6 @@
                                 <div class="flex flex-wrap flex-col flex-1">
                                     <span class="paragraph !leading-none">Email us</span>
                                     <h5 class="text-xl font-bold font-Syne text-black-800 leading-7">ingridmah.npnamtran@gmail.com
-                                    </h5>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap gap-4 pb-4 border-b border-gray-300 lg:max-w-[416px]">
-                                <span>
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                                d="M20.0663 6.66658C21.3686 6.92067 22.5654 7.55759 23.5037 8.49583C24.4419 9.43407 25.0788 10.6309 25.3329 11.9333M20.0663 1.33325C22.772 1.63383 25.295 2.84548 27.2212 4.76926C29.1474 6.69304 30.3623 9.2146 30.6663 11.9199M29.3329 22.5599V26.5599C29.3344 26.9313 29.2584 27.2988 29.1096 27.639C28.9608 27.9793 28.7427 28.2847 28.469 28.5357C28.1954 28.7868 27.8724 28.9779 27.5206 29.0969C27.1688 29.2158 26.7961 29.26 26.4263 29.2266C22.3234 28.7808 18.3823 27.3788 14.9196 25.1333C11.698 23.0861 8.9667 20.3548 6.91959 17.1333C4.66622 13.6549 3.26391 9.69458 2.82625 5.57325C2.79293 5.20454 2.83675 4.83293 2.95492 4.48208C3.07309 4.13124 3.26301 3.80884 3.51261 3.53541C3.7622 3.26199 4.06599 3.04353 4.40464 2.89395C4.74329 2.74436 5.10937 2.66693 5.47959 2.66659H9.47959C10.1267 2.66022 10.754 2.88936 11.2446 3.3113C11.7352 3.73323 12.0557 4.31918 12.1463 4.95992C12.3151 6.24001 12.6282 7.49689 13.0796 8.70659C13.259 9.18382 13.2978 9.70247 13.1915 10.2011C13.0851 10.6997 12.8381 11.1574 12.4796 11.5199L10.7863 13.2133C12.6843 16.5513 15.4482 19.3152 18.7863 21.2133L20.4796 19.5199C20.8421 19.1614 21.2998 18.9144 21.7984 18.808C22.297 18.7017 22.8157 18.7405 23.2929 18.9199C24.5026 19.3713 25.7595 19.6844 27.0396 19.8533C27.6873 19.9446 28.2788 20.2709 28.7016 20.7699C29.1245 21.269 29.3491 21.906 29.3329 22.5599Z"
-                                                stroke="#080808" stroke-opacity="0.9" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" />
-                                    </svg>
-
-
-                                </span>
-                                <div class="flex flex-wrap flex-col flex-1">
-                                    <span class="paragraph !leading-none">Call us</span>
-                                    <h5 class="text-xl font-bold font-Syne text-black-800 leading-7">+84 81 7833504
                                     </h5>
                                 </div>
                             </div>
