--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
                         <div id="about_me_tab" class="tab-content active relative">
                             <div class="grid grid-cols-1">
                                 <h4 class="text-black-800 text-2xl lg:text-[32px] font-bold font-Syne mb-6">Ingrid Mah</h4>
-                                <p class="paragraph mb-7">Lorem ipsum dolor sit amet consectetur. Odio morbi commodo pretium ac volutpat etiam elit. Mauris ante duis turpis laoreet at dolor quisque nullam. </p>
-                                <p class="paragraph mb-14">Potenti fames justo elementum parturient enim lectus. Nam augue amet libero dignissim.</p>
-
+                                <p class="paragraph mb-7">
+                                    Howdy everyone!!! I am Ingrid Mah, a future Chemical Engineer with a passion blending science and creativity. I have focused on improving my leadership and problem-solving skills both in the lab and through my hobbies. I embrace challenges with a unique balance of precision and artistry. Driven by a desire to create real-world solutions, I aspire to make impact and contribute to the betterment of the world.
+                                </p>
                                 <ul class="flex-col gap-3 inline-flex">
                                     <li class="gap-10 inline-flex items-center">
                                         <span class="w-[110px] text-black-text-800 text-lg font-normal leading-none">
